infrastructure/k8s/frontend-home/frontend-home-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autopilot-drone-frontend-home
  namespace: autopilot-drone
  labels:
    app: autopilot-drone-frontend-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autopilot-drone-frontend-home
  template:
    metadata:
      labels:
        app: autopilot-drone-frontend-home
    spec:
      containers:
        - name: autopilot-drone-frontend-home
          image: docker.io/kasinphatspam/autopilot-drone-frontend-home:0.0.1
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
            name: web-port
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: docker-registry
