infrastructure/k8s/frontend-home/frontend-home-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autopilot-drone-frontend-home
  namespace: autopilot-drone
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: autopilot-drone-frontend-home
