infrastructure/k8s/frontend-home/frontend-home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: autopilot-drone-frontend-home
  namespace: autopilot-drone
spec:
  ingressClassName: nginx
  rules:
  - host: pyxieportal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autopilot-drone-frontend-home
            port:
              number: 3000
  tls:
  - hosts:
    - pyxieportal.com
    secretName: letsencrypt-prod
